--- a/index.html
+++ b/index.html
@@ -966,9 +966,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     </h1>
                                     <p data-aos="fade-right" data-aos-delay="600">Get access to Great God Events Halls, your venue for great and successful events.
                                     </p>
+									<section class="link">
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
                                     <a data-aos="fade-right" data-aos-delay="900" href="contact.html" class="btn btn-primary">Book
-                                        Now</a>
+                                        Now</a></section>
                                 </div>
                             </div>
                             <div class="swiper-slide slide-content d-flex align-items-center">
@@ -977,9 +978,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     </h1>
                                     <p data-aos="fade-right" data-aos-delay="600">Whether you need eventspace for one hour or more, we have a solution for you.
                                     </p>
+									<section class="link">
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
-                                    <a data-aos="fade-right" data-aos-delay="900" href="contact.html" class="btn btn-primary">Book
-                                        Now</a>
+                                    <a data-aos="fade-right" data-aos-delay="900" href="contact.html" class="btn btn-primary">Book Now</a>
+									</section>
                                 </div>
                             </div>
 							<div class="swiper-slide slide-content d-flex align-items-center">
@@ -988,9 +990,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     </h1>
                                     <p data-aos="fade-right" data-aos-delay="600">Join people with successful events hosted by us.
                                     </p>
+									<section class="link">
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
                                     <a data-aos="fade-right" data-aos-delay="900" href="contact.html" class="btn btn-primary">Book
-                                        Now</a>
+                                        Now</a></section>
                                 </div>
                             </div>
                         </div>
@@ -1124,7 +1127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="featured-img d-none d-sm-flex d-xs-flex">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="Featured 1">
 						<div class="text-center darken-grey-text mb-4">
-                        <iframe width="350" height="300" src="https://www.youtube.com/watch?v=GrgTecML8yM&feature=youtu.be" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
+                        <iframe width="350" height="300" src="https://youtu.be/GrgTecML8yM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
 						</div>
                     </div>
                 </div>
@@ -1567,7 +1570,7 @@ Utilise our well situated shops to propel your business forward with access to t
                     </div>
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
-                            <div class="fb-page" style="height: 90px;" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-3">
