--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -541,7 +541,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
-                            <div class="fb-page" style="height: 90px;" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/ggeventshall" data-tabs="timeline,events,messages" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ggeventshall" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ggeventshall">Ggeventshall</a></blockquote></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-3">
