--- a/about.html
+++ b/about.html
@@ -315,7 +315,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="featured-img d-none d-sm-flex d-xs-flex">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="about us" class="img-responsive">
                         <div class="text-center darken-grey-text mb-4">
-                        <iframe width="350" height="300" src="https://youtu.be/GrgTecML8yM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
+                        <iframe width="350" height="300" src="https://www.youtube.com/embed/GrgTecML8yM?autoplay=1&origin=http://ggeventhalls.com" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen   ng-show="showvideo"></iframe>
 						</div>
                     </div>
                 </div>
@@ -324,6 +324,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
     <!-- Featured End -->
     
+	<div class="col-md-10  " data-aos="fade-left" data-aos-delay="400" data-aos-duration="800" style="margin: 5% 0 5% 0; position: relative;">
+	<div class="embed-responsive embed-responsive-16by9 d-block d-sm-none">
+		<iframe src="https://player.vimeo.com/video/352627641?autoplay=1&origin=http://ggeventhalls.com" width="" height="260" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+	</div></div>
+	
 	<section>
 	
 	
