--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="featured-img d-none d-sm-flex d-xs-flex">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="Featured 1">
 						<div class="text-center darken-grey-text mb-4">
-                        <iframe width="350" height="300" src="https://www.youtube.com/embed/GrgTecML8yM?autoplay=1&origin=http://ggeventhalls.com" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
+                        <iframe width="350" height="300" src="https://www.youtube-nocookie.com/embed/GrgTecML8yM?showinfo=0&controls=0&autoplay=1&rel=0&origin=http://ggeventhalls.com" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
 						</div>
                     </div>
                 </div>
@@ -1138,7 +1138,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	<div class="col-md-10  " data-aos="fade-left" data-aos-delay="400" data-aos-duration="800" style="margin-top: 5%; position: relative;">
 	<div class="embed-responsive embed-responsive-16by9 d-block d-sm-none">
-		<iframe src="https://player.vimeo.com/video/352627641" width="" height="260" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+		<iframe src="https://player.vimeo.com/video/352627641?autoplay=1&origin=http://ggeventhalls.com" width="" height="260" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 	</div></div>
 	
 	<!-- Recent Posts Start -->
