--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="featured-img d-none d-sm-flex d-xs-flex">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="Featured 1">
 						<div class="text-center darken-grey-text mb-4">
-                        <iframe width="350" height="300" src="https://www.youtube-nocookie.com/embed/GrgTecML8yM?showinfo=0&controls=0&autoplay=1&rel=0&origin=http://ggeventhalls.com" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
+                         <iframe width="350" height="300" src="https://www.youtube.com/embed/GrgTecML8yM?autoplay=1&origin=http://ggeventhalls.com&showinfo=0&rel=0&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen   ng-show="showvideo"></iframe>
 						</div>
                     </div>
                 </div>
@@ -1488,7 +1488,7 @@ Utilise our well situated shops to propel your business forward with access to t
 			<div class="subscribe-btn" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">
 			<input class="submit btn btn-primary" id="searchsubmit" name="submit" type="submit"></div>
             </form>
-		<div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Posted your message successfully!</h3> </div>
+		<div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Thank you for contacting us. We will be in touch with you very soon!</h3> </div>
         <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
 	   </section>
     </div>
