--- a/contact.html
+++ b/contact.html
@@ -507,7 +507,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     </span>
                                 </div>
                             </form>
-							<div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Posted your message successfully!</h3> </div>
+							<div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Thank you for contacting us. We will be in touch with you very soon!</h3> </div>
 							<div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
 							
                             <p>We respect your privacy</p>
