--- a/about.html
+++ b/about.html
@@ -326,7 +326,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
 	<div class="col-md-10  " data-aos="fade-left" data-aos-delay="400" data-aos-duration="800" style="margin: 5% 0 5% 0; position: relative;">
 	<div class="embed-responsive embed-responsive-16by9 d-block d-sm-none">
-		<iframe src="https://player.vimeo.com/video/352627641?autoplay=1&origin=http://ggeventhalls.com" width="" height="260" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/GrgTecML8yM?autoplay=1&origin=http://ggeventhalls.com&showinfo=0&rel=0&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" width="" height="260" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 	</div></div>
 	
 	<section>
@@ -513,7 +513,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <span data-aos="fade-up" data-aos-delay="400" data-aos-duration="600"
                                         data-aos-offset="0">Helen and James Wedding Reception</span>
                                     <p data-aos="fade-up" data-aos-delay="600" data-aos-duration="600"
-                                        data-aos-offset="0">"I would like to thank you and your team for Helen and James wedding reception last Saturday, everything was perfect and nothing was too much trouble for you and your team. "We really appreciate you making their day complete and so special. The food and service was second to none. Thank you all very much."</p>
+                                        data-aos-offset="0">"I would like to thank you and your team for Helen and James wedding reception last Saturday, everything was perfect and nothing was too much trouble for you and your team. "We really appreciate you making their day complete and so special. The food and service was second to none all thanks to Kingstine-JoFoods. Thank you all very much."</p>
                                 </div>
                             </div>
                         </div>
