--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	<div class="col-md-10  " data-aos="fade-left" data-aos-delay="400" data-aos-duration="800" style="margin-top: 5%; position: relative;">
 	<div class="embed-responsive embed-responsive-16by9 d-block d-sm-none">
-		<iframe src="https://player.vimeo.com/video/352627641?autoplay=1&origin=http://ggeventhalls.com" width="" height="260" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/GrgTecML8yM?autoplay=1&origin=http://ggeventhalls.com&showinfo=0&rel=0&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" width="" height="260" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 	</div></div>
 	
 	<!-- Recent Posts Start -->
