--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="robots" content="noindex">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content='Great God Events Hall: we create a unique and great solution for meetings, gatherings and events by providing a beautiful standard, clean, accessible and affordable facility for our customers.' />
+    <meta name="description" content='Contact us for your Weddings, Birthdays, Concerts, Graduation party, Bash, Grooves, Launchings, etc.' />
 	<meta name="keywords" content="meetings, gatherings, events, shops, Kingstine-Jo Foods, Changing rooms,Cold Room, Store room, Car Park, Water Supply, Convenience, Chairs and Tables, Stage/Platform, Conference Room"	/>
 	<meta name='google-site-verification' content='#' />
     <meta name='msvalidate.01' content='#' />
@@ -450,7 +450,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="col-md-6 col-xl-3">
                         <div class="single-widget contact-widget" data-aos="fade-up" data-aos-delay="0">
                             <h6 class="widget-tiltle">&nbsp; <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="GGEventshall.com"></a></h6>
-                            <p>Whatever the nature of your Event our excellent team and facilities make GGEventshall the perfect venue.</p>
+                            <p>A one stop place for Weddings, Birthdays, Concerts, Graduation party, Bash's, Grooves, Launchings, etc. 3Massive Halls with 600-1200 seaters capacity, Full Air-condictioned, Standby Gen, An eatery inclusive (Kingstine-jo Foods), cold rooms, changing rooms, 300kva transformer etc</p>
                             
                         </div>
                     </div>
