--- a/shops.html
+++ b/shops.html
@@ -307,8 +307,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</div>
 							<div class="">
 								<h5>Call Us</h5>
-								<p>+234 81 405 54 601, +234 70 858 70 632</p>
-								<p>+234 80 51 055 471, +234 81 407 61 125</p>
+								<p>(+234)0814 076 1125, (+234)0805 105 5471</p>
+								<p>(+234)0802 695 8952</p>
 							</div>
 						</div>
 					</div>
@@ -380,7 +380,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <i class="fa fa-fax"></i>
                                 <div class="media-body ml-3">
                                     <h6>Mobile</h6>
-                                    <a href="tel:07085870632">(070) 858 70 632</a>
+                                    <a href="tel:0802 695 8952">(+234)0802 695 8952</a>
                                 </div>
                             </div>
                         </div>
