--- a/contact.html
+++ b/contact.html
@@ -349,8 +349,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="swiper-wrapper">
 						<div class="row">
 						<div class="col-md-12" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" width="1100px" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
-						</div>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" width="1500px" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+							</div>
 					 </div>
 				</div>
 			</div>
@@ -408,7 +408,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                      <div class="single-contact">
                         <i class="fa fa-phone"></i>
                         <h5>Phone</h5>
-                        <p>(+234)081 405 54 601, (+234)070 858 70 632, (+234)080 51 055 471, (+234)081 407 61 125</p>
+                        <p>(+234)0814 076 1125, (+234)0805 105 5471, (+234)0802 695 8952</p>
                      </div>
                      <div class="single-contact">
                         <i class="fa fa-envelope"></i>
@@ -486,7 +486,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <i class="fa fa-fax"></i>
                                 <div class="media-body ml-3">
                                     <h6>Mobile</h6>
-                                    <a href="tel:07085870632">(070) 858 70 632</a>
+                                    <a href="0802 695 8952">(+234)0802 695 8952</a>
                                 </div>
                             </div>
                         </div>
