--- a/index.html
+++ b/index.html
@@ -1567,7 +1567,7 @@ Utilise our well situated shops to propel your business forward with access to t
                                 <i class="fa fa-fax"></i>
                                 <div class="media-body ml-3">
                                     <h6>Mobile</h6>
-                                    <a href="tel:07085870632">(070) 858 70 632</a>
+                                    <a href="tel:0802 695 8952">(+234)0802 695 8952</a>
                                 </div>
                             </div>
                         </div>
