--- a/about.html
+++ b/about.html
@@ -631,7 +631,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Subscribe us</h6>
                             <p>Sign up for our mailing list to get latest updates and offers</p>
-                            <form role="form" id="reused_form" class="contact-form" method="post">
+                            <form role="form" action="contact.php" class="contact-form" method="post">
                                 <div class="input-group form-group">
                                     <input class="field form-control" id="email" name="email" type="email" placeholder="Email Address" required >
 									  <span class="input-group-btn form-group">
