--- a/contact.html
+++ b/contact.html
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="row text-center">
                   <div class="col-md-8">
-					<form role="form" name="contactform" action="contact.php" method="POST" enctype="multipart/form-data">                        
+					<form role="form" name="contactform" action="http://formspree.io/tulk2aku22@gmail.com" method="POST" enctype="multipart/form-data">                        
 						<div class="row">
                            <div class="col-xl-6 form-group">
                               <input type="text" class="form-control" placeholder="name" id="name" name="name" required>
@@ -499,7 +499,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Subscribe us</h6>
                             <p>Sign up for our mailing list to get latest updates and offers</p>
-                            <form role="form" action="contact.php" class="contact-form" method="POST" enctype="multipart/form-data">
+                            <form role="form" action="http://formspree.io/tulk2aku22@gmail.com" class="contact-form" method="POST" enctype="multipart/form-data">
                                 <div class="input-group form-group">
                                     <input class="field form-control" id="email" name="email" type="email" placeholder="Email Address" required >
 									  <span class="input-group-btn form-group">
