--- a/contact.html
+++ b/contact.html
@@ -206,6 +206,13 @@ textarea {
 .contact-form input:focus, textarea:focus {
 	border-color: #CC5B00
 }
+.map {
+	height: 685px;
+	width: 100%;
+	display: block;
+	background: #f0f0f0;
+	margin: 50px 0 20px 0;
+}
 
 </style>
 </head>
@@ -342,13 +349,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
 	
 	<section>
-        <div class="container">
-            <div class="testimonials">
-                <div class="swiper-container test-slider">
-                    <div class="swiper-wrapper">
-						<div class="row">
-						<div class="col-md-12" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" width="1500px" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="row">
+						<div class="col-md-12" id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" class="map" id="map-canvas" style="border:0" allowfullscreen></iframe>
 							</div>
 					 </div>
 				</div>
@@ -547,6 +550,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="assets/js/lightgallery-all.min.js"></script>
 	<!--Template Script-->
     <script src="assets/js/main.js"></script>
+	<script src="assets/js/map.js"></script>
 	
 </body>
 
