--- a/shops.html
+++ b/shops.html
@@ -71,9 +71,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		overflow-y: auto;
 	}
 	
+	.map {
+	height: 500px;
+	width:700px;
+	display: block;
+	background: #f0f0f0;
+	margin: 20px 0 20px 0;
+}
+	
 	 /*media quary */
 @media(max-width:420px) {
-
+	.map {
+	height: 600px;
+	width:700px;
+	display: block;
+	background: #f0f0f0;
+	margin: 20px 0 20px 0;
+}
 }
 </style>
 </head>
@@ -284,8 +298,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="swiper-container test-slider">
                     <div class="swiper-wrapper">
 						<div class="row">
-						<div class="col-md-7" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" width="700px" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<div class="col-md-7"  id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" class="map" id="map-canvas" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
 					 </div>
 				<br>
@@ -319,6 +333,44 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
         </div>
     </section>
+	
+	
+	<section class="testimonial-and-clients d-block d-sm-none">
+        <div class="container">
+            <div class="testimonials">
+                <div class="swiper-container test-slider">
+                    <div class="swiper-wrapper">
+						<div class="col-md-12 d-block d-sm-none" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
+						<div class="title text-left">
+							<h1 class="title-blue">Visit Us</h1>
+							</div>
+						<div class="col-md-6 contact_grids_info">
+								<div class="contact_grid_right">
+								<h5> OFFICE </h5>
+								<p> Opposite the Archangels Church, #4/6 Mission St, Satellite Town 102002, <br>Lagos, Nigeria.</p>
+							</div>
+							<div class="">
+								<h5>Mail Us</h5>
+								<p>
+									 <a href="mailto: info@GGEventhalls.com"><span style="color: #c4c4c4;"> info@GGEventhalls.com</span></a>
+								</p>
+							</div>
+							<div class="">
+								<h5>Call Us</h5>
+								<p>(+234)0814 076 1125, (+234)0805 105 5471</p>
+								<p>(+234)0802 695 8952</p>
+							</div>
+						</div>
+					</div>
+					 </div>
+				</div>
+          </div>
+            </div>
+            
+        </div>
+    </section>
+	
+	
     <!-- Testimonial and Clients End -->
 	<!-- Call To Action 2 Start -->
     <section class="cta cta2" data-aos="fade-up" data-aos-delay="0">
@@ -442,12 +494,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/swiper.min.js"></script>
     <script src="assets/js/lightgallery-all.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="assets/js/google-map.js"></script>
-	<script src="assets/js/bootstrap-datepicker.js"></script>
-    <script src="assets/js/jquery.timepicker.min.js"></script>
-    <!--Template Script-->
+	<!--Template Script-->
     <script src="assets/js/main.js"></script>
+	<script src="assets/js/map.js"></script>
 	
 	
 	<!-- // new line -->
